--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">Hielo <span>by TEMPLATED</span></a></div>
+				<div class="logo"><a href="index.html">Hello <span>by TEMPLATED</span></a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -35,7 +35,7 @@
 					<div class="inner">
 						<header>
 							<p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p>
-							<h2>Hielo</h2>
+							<h2>Hello</h2>
 						</header>
 					</div>
 				</article>
@@ -44,7 +44,7 @@
 					<div class="inner">
 						<header>
 							<p>Lorem ipsum dolor sit amet nullam feugiat</p>
-							<h2>Magna etiam</h2>
+							<h2>I Love</h2>
 						</header>
 					</div>
 				</article>
@@ -53,7 +53,7 @@
 					<div class="inner">
 						<header>
 							<p>Sed cursus aliuam veroeros lorem ipsum nullam</p>
-							<h2>Tempus dolor</h2>
+							<h2>My India</h2>
 						</header>
 					</div>
 				</article>
